--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,12 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
+ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
+     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
 }
 
 tasks.named('test') {
